--- a/MySchool/Properties/Resources.resx
+++ b/MySchool/Properties/Resources.resx
@@ -124,11 +124,11 @@
   <data name="dash-4" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Resources\dash-4.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
-  <data name="user-06" type="System.Resources.ResXFileRef, System.Windows.Forms">
-    <value>..\Resources\user-06.jpg;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
-  </data>
   <data name="logo1" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Resources\logo1.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
+  <data name="icon-22" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\icon-22.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
   <data name="dash-2" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Resources\dash-2.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
@@ -139,8 +139,8 @@
   <data name="dash-3" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Resources\dash-3.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
-  <data name="icon-22" type="System.Resources.ResXFileRef, System.Windows.Forms">
-    <value>..\Resources\icon-22.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  <data name="DefaultProfileImage" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\user-06.jpg;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
   <data name="Hazem" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Resources\Hazem.jpg;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
@@ -148,10 +148,13 @@
   <data name="icon-23" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Resources\icon-23.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
+  <data name="user-061" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\user-061.jpg;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
   <data name="icon-1" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Resources\icon-1.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
-  <data name="user-061" type="System.Resources.ResXFileRef, System.Windows.Forms">
-    <value>..\Resources\user-061.jpg;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  <data name="الشعار" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\الشعار.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
 </root>
